--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,17 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0.5",
-        "symfony/css-selector": "~2.8|~3.0",
-        "symfony/dom-crawler": "~2.8|~3.0"
+        "symfony/css-selector": "~2.8|~3.0|~4.4",
+        "symfony/dom-crawler": "~2.8|~3.0|~4.4"
     },
     "autoload": {
         "psr-4": {
             "stitchua\\dynamicform\\": "src"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
         }
     }
 }
